# Speck

./: MPU6050.py  Main.py  README.md  Servo_Installation.py  Speck.py  demo.py  easing.py  installSpeck.py  install_Speck.py  pyproject.toml  servoInstallation.py  testLegs.py  updateSpeck.py
Installation/: Servo_Installation.py
src/Speck/: Speck.py
tests/: Bluetooth Test.py  Camera Test.py  I2C Test.py  IMU Test.py  Image Processing.py  Servo_Test.py
